<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bY"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/Y"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bZ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bW"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/bZ"

        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/Z"
        app:layout_constraintBaseline_toBaselineOf="@+id/bY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bY" />

    <Button
        android:id="@+id/bW"

        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/W"
        app:layout_constraintBaseline_toBaselineOf="@+id/bV"
        app:layout_constraintEnd_toStartOf="@+id/bX"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bV" />

    <Button
        android:id="@+id/bV"

        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/V"
        app:layout_constraintBottom_toTopOf="@+id/bY"
        app:layout_constraintEnd_toStartOf="@+id/bW"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bS" />

    <Button
        android:id="@+id/bX"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/X"
        app:layout_constraintBaseline_toBaselineOf="@+id/bW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bW" />

    <Button
        android:id="@+id/bO"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/O"
        app:layout_constraintBaseline_toBaselineOf="@+id/bN"
        app:layout_constraintEnd_toStartOf="@+id/bP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bN" />

    <Button
        android:id="@+id/bP"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/P"
        app:layout_constraintBaseline_toBaselineOf="@+id/bO"
        app:layout_constraintEnd_toStartOf="@+id/bQ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bO" />

    <Button
        android:id="@+id/bQ"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/Q"
        app:layout_constraintBaseline_toBaselineOf="@+id/bP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bP" />

    <Button
        android:id="@+id/bN"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/N"
        app:layout_constraintBaseline_toBaselineOf="@+id/bM"
        app:layout_constraintEnd_toStartOf="@+id/bO"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bM" />

    <Button
        android:id="@+id/bM"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/M"
        app:layout_constraintBottom_toTopOf="@+id/bR"
        app:layout_constraintEnd_toStartOf="@+id/bN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bG" />

    <Button
        android:id="@+id/bS"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/S"
        app:layout_constraintBaseline_toBaselineOf="@+id/bR"
        app:layout_constraintEnd_toStartOf="@+id/bT"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bR" />

    <Button
        android:id="@+id/bR"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/R"
        app:layout_constraintBottom_toTopOf="@+id/bV"
        app:layout_constraintEnd_toStartOf="@+id/bS"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bN" />

    <Button
        android:id="@+id/bT"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/T"
        app:layout_constraintBaseline_toBaselineOf="@+id/bS"
        app:layout_constraintEnd_toStartOf="@+id/bU"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bS" />

    <Button
        android:id="@+id/bU"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/U"
        app:layout_constraintBaseline_toBaselineOf="@+id/bT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bT" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="138dp"
        android:layout_height="153dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/forca_6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/palavra_jogo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/bL"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/L"
        app:layout_constraintBaseline_toBaselineOf="@+id/bK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bK" />

    <Button
        android:id="@+id/bG"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/G"
        app:layout_constraintBottom_toTopOf="@+id/bM"
        app:layout_constraintEnd_toStartOf="@+id/bH"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bA" />

    <Button
        android:id="@+id/bJ"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/J"
        app:layout_constraintBaseline_toBaselineOf="@+id/bI"
        app:layout_constraintEnd_toStartOf="@+id/bK"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bI" />

    <Button
        android:id="@+id/bI"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/I"
        app:layout_constraintBaseline_toBaselineOf="@+id/bH"
        app:layout_constraintEnd_toStartOf="@+id/bJ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bH" />

    <Button
        android:id="@+id/bH"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/H"
        app:layout_constraintBaseline_toBaselineOf="@+id/bG"
        app:layout_constraintEnd_toStartOf="@+id/bI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bG" />

    <Button
        android:id="@+id/bK"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/K"
        app:layout_constraintBaseline_toBaselineOf="@+id/bJ"
        app:layout_constraintEnd_toStartOf="@+id/bL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bJ" />

    <Button
        android:id="@+id/bD"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/D"
        app:layout_constraintBaseline_toBaselineOf="@+id/bC"
        app:layout_constraintEnd_toStartOf="@+id/bE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bC" />

    <Button
        android:id="@+id/bA"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginTop="312dp"
        android:text="@string/A"
        app:layout_constraintEnd_toStartOf="@+id/bB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bB"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/B"
        app:layout_constraintBaseline_toBaselineOf="@+id/bA"
        app:layout_constraintEnd_toStartOf="@+id/bC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bA" />

    <Button
        android:id="@+id/bC"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/C"
        app:layout_constraintBaseline_toBaselineOf="@+id/bB"
        app:layout_constraintEnd_toStartOf="@+id/bD"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bB" />

    <Button
        android:id="@+id/bF"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/F"
        app:layout_constraintBaseline_toBaselineOf="@+id/bE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bE" />

    <Button
        android:id="@+id/bE"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/E"
        app:layout_constraintBaseline_toBaselineOf="@+id/bD"
        app:layout_constraintEnd_toStartOf="@+id/bF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bD" />

    <TextView
        android:id="@+id/questao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/questao_jogo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.369" />

    <TextView
        android:id="@+id/regressao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/tempo"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/questao"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/rankingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/texto_ranking"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ranking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        app:layout_constraintVertical_chainStyle="packed" />

    <ListView
        android:id="@+id/ranking"
        android:layout_width="124dp"
        android:layout_height="143dp"
        android:divider="#ffcdcdcd"
        android:dividerHeight="1px"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:padding="0sp"
        android:paddingStart="0sp"
        android:paddingLeft="0sp"
        android:paddingTop="0sp"
        android:paddingEnd="0sp"
        android:paddingRight="0sp"
        android:paddingBottom="0sp"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/questao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/rankingText" />

</androidx.constraintlayout.widget.ConstraintLayout>
